syntax = "proto3";
package embedding;

service EmbeddingService {
    rpc text_embedding(TextReq) returns (Embedding);
    rpc batch_text_embedding (BatchTextReq) returns (TensorResp);
}

message TextReq{
    string text=1;
}

message BatchTextReq{
    repeated string texts=1;
    uint32 batch_size = 2;
}

message TensorResp{
    repeated Embedding embedding=1;
}

message Embedding{
    repeated float embedding=1;
}
